--- a/src/web/templates/submission_results.html
+++ b/src/web/templates/submission_results.html
@@ -333,13 +333,12 @@
             </a>
 
             {% if current_user.role == 'student' %}
-            <a href="{{ url_for('student.submit_code', assignment_id=submission.assignment.id) }}"
-                class="btn btn-success">
+            <a href="{{ url_for('student.submit_code', assignment_id=assignment.get_id()) }}" class="btn btn-success">
                 <i class="fas fa-arrow-up"></i> Submit New Version
             </a>
             {% endif %}
 
-            <a href="{{ url_for('student.assignment_detail', assignment_id=submission.assignment.id) }}"
+            <a href="{{ url_for('student.assignment_detail', assignment_id=assignment.get_id()) }}"
                 class="btn btn-outline-secondary">
                 Back to Assignment
             </a>
