--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="ACCL - Adaptive Collaborative Code Lab. Online coding platform for assignments, testing, and plagiarism detection.">
     <meta name="author" content="ACCL Team">
-    <meta name="theme-color" content="#FF9500">
+    <meta name="theme-color" content="#667eea">
     <title>{% block title %}ACCL - Adaptive Collaborative Code Lab{% endblock %}</title>
 
     <!-- Bootstrap CSS -->
@@ -16,8 +16,8 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <!-- Custom CSS with cache-busting -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}?v=2.0">
 
     {% block extra_css %}{% endblock %}
 </head>
